# zkspv-circuits

./: .dockerignore  .env  .gitignore  20.04_amd64_cuda_12_0.Dockerfile  Cargo.toml  Dockerfile  LICENSE  README.md  cuda_12.2_amd64.Dockerfile  docker-compose.yml  env.example  rust-toolchain  rust-toolchain.toml  spv.toml  spv.toml.example
challenges_db/: 000020.sst  IDENTITY  LOG  LOG.old.1702008874925687  LOG.old.1702013184634189  LOG.old.1702025015124696  LOG.old.1702032832579674  MANIFEST-000022  OPTIONS-000024
configs/arbitration/: arbitration_evm.json  batch_block_merkle_depth_8_length_192_num_1.json  batch_block_merkle_depth_8_length_192_num_3.json  batch_block_merkle_depth_8_length_192_num_5.json  blockTrack_aggregate_width_1.json  blockTrack_aggregate_width_10_task_len_2.json  blockTrack_aggregate_width_1_task_len_3.json  blockTrack_aggregate_width_2.json  blockTrack_aggregate_width_3.json  blockTrack_width_1.json  blockTrack_width_10.json  blockTrack_width_2.json  blockTrack_width_256.json  blockTrack_width_3.json  block_track_aggregate_width_1.json  block_track_aggregate_width_1_task_len_2.json  block_track_aggregate_width_1_task_len_3.json  block_track_aggregate_width_20_task_len_3.json  block_track_aggregate_width_40_task_len_3.json  block_track_width_1.json  block_track_width_20.json  block_track_width_256.json  block_track_width_40.json  ethereum_source_final_0.json  ethereum_source_final_2.json  ethereum_transaction_dynamic_fee_tx_type.json  ethereum_transaction_dynamic_fee_tx_type_max_len_21277.json  ethereum_transaction_receipt_dynamic_fee_tx_type_max_len_789.json  ethereum_tx.json  final_0.json  final_1.json  final_2.json  from_ethereum_to_zksync_era_destination_final_0.json  from_ethereum_to_zksync_era_source_final_0.json  from_zksync_era_to_ethereum_destination_final_0.json  from_zksync_era_to_ethereum_source_final_0.json  from_zksync_era_to_ethereum_source_final_1.json  l1_ethereum_l2_null_source_final_0.json  l1_ethereum_l2_zksync_era_destination_final_0.json  receipt.json  (+12 more)
configs/bench/: storage.json
configs/cache/: cache.json
configs/evm/: transaction_evm.json
configs/headers/: goerli_4_3_final.json  goerli_4_3_for_evm_0.json  mainnet_7.json  mainnet_8_7.json
configs/tests/: one_block.json  receipt.json  storage.json  track_block.json  transaction.json  zksync_era_block.json  zksync_era_transaction.json  zksync_transaction.json
configs/transactions/: goerli_1.json  goerli_1_evm.json
configs/zksync/: evm.json
data/bench/: storage.csv  transaction.csv
data/chain/: chainid1_000000_000001.json
data/headers/: chainid5_765fb3_765fb4.json
data/storage/: test.calldata  test.yul
docs/: deploy.md  environment.md  query.md
scripts/: bench_arbitration.sh  build_arbitration.sh  clear_snark.sh  download_setup.sh  services.sh
src/: compare.rs  lib.rs  providers.rs
src/arbitration/: circuit_types.rs  helper.rs  mod.rs  proof.rs  router.rs  test.rs  types.rs
src/arbitration/final_assembly/: mod.rs
src/arbitration/final_assembly/assembly_circuit/: mod.rs
src/arbitration/network_pairs/: from_ethereum_to_zksync.rs  from_zksync_to_ethereum.rs  mod.rs
src/arbitrum_block_header/: mod.rs  tests.rs
src/block_header/: helper.rs  mod.rs  tests.rs
src/block_header/aggregation/: final_merkle.rs
src/block_header/arbitrum/: mod.rs  tests.rs
src/block_header/arbitrum/aggregation/: final_merkle.rs  mod.rs
src/block_header/ethereum/: mod.rs  tests.rs
src/block_header/ethereum/aggregation/: final_merkle.rs  mod.rs
src/block_header/optimism/: mod.rs  tests.rs
src/block_header/optimism/aggregation/: final_merkle.rs  mod.rs
src/block_header/zksync_era/: mod.rs  tests.rs
src/config/: mod.rs  setting.rs  tests.rs
src/config/api/: mod.rs
src/config/contract/: mod.rs  zksync_era_contract.rs
src/config/db/: mod.rs
src/config/load/: mod.rs
src/config/log/: mod.rs
src/config/rpcs/: mod.rs
src/config/token/: mod.rs  zksync_era_token.rs
src/constant/: mod.rs
src/db/: mod.rs
src/ecdsa/: mod.rs  util.rs
src/final_assembly/: mod.rs
src/integration/: mod.rs
src/keccak/: builder.rs  mod.rs  tests.rs
src/mpt/: mod.rs  tests.rs
src/new_block_header/: helper.rs  mod.rs  tests.rs
src/new_block_header/aggregation/: final_merkle.rs
src/proof/: mod.rs
src/proof/arbitrum/: mod.rs  tests.rs
src/proof/arbitrum_proof/: mod.rs  tests.rs
src/proof/zksync_era/: mod.rs  tests.rs
src/receipt/: mod.rs  tests.rs  util.rs
src/receipt/arbitrum/: mod.rs  tests.rs
src/receipt/ethereum/: mod.rs  tests.rs
src/receipt/optimism/: mod.rs  tests.rs
src/rlp/: builder.rs  mod.rs  rlc.rs  tests.rs
src/server/: client.rs  execute.rs  mod.rs  server.rs
src/storage/: helper.rs  helpers.rs  mod.rs  tests.rs  util.rs
src/storage/contract_storage/: mod.rs  tests.rs  util.rs
src/track_block/: mod.rs  tests.rs  util.rs
src/transaction/: mod.rs  tests.rs  util.rs
src/transaction/ethereum/: helper.rs  mod.rs  tests.rs  util.rs
src/transaction/zksync_era/: mod.rs  tests.rs  util.rs
src/transaction/zksync_era/future/: mod.rs  tests.rs
src/transaction/zksync_era/now/: mod.rs  tests.rs
src/transaction_receipt/: mod.rs  tests.rs  util.rs
src/type/: mod.rs
src/util/: circuit.rs  concur_var.rs  errors.rs  helpers.rs  mod.rs
src/util/cache/: mod.rs
src/util/circuit_derive/: Cargo.toml
src/util/circuit_derive/src/: lib.rs
src/util/contract_abi/: erc20.rs
src/util/scheduler/: arbitration_scheduler.rs  evm_wrapper.rs  mod.rs
src/util/zk_provider/: mod.rs
test_data/: arbitration_mock_data.json  block_batch_data.json  from_era_to_goerli:dest.json  from_ethereum_to_zksync_era_dest.json  from_ethereum_to_zksync_era_source.json  from_goerli_to_era:source.json  from_zksync_era_to_ethereum_dest.json  from_zksync_era_to_ethereum_source.json  goerli_dest.json  goerli_source.json
