[package]
name = "zkspv_circuits"
version = "0.1.1"
edition = "2021"


[[bin]]
name = "header_chain"
required-features = ["aggregation", "clap"]

[[bin]]
name = "transaction"
required-features = ["aggregation", "clap", "evm"]

[dependencies]
itertools = "0.10"
lazy_static = "1.4.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
rayon = "1.7"
thiserror = "1.0"

# macro
circuit_derive = { path = "src/util/circuit_derive", optional = true }

# misc
log = "0.4"
env_logger = "0.10"
ark-std = { version = "0.4.0", features = ["print-trace"], optional = true }
clap = { version = "4.0.13", features = ["derive"], optional = true }
clap-num = { version = "1.0.2", optional = true }
bincode = { version = "1.3.3", optional = true }
base64 = { version = "0.21", optional = true }
serde_with = { version = "2.2", optional = true }

# halo2
ff = "0.12"
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git",  branch = "community-edition", default-features = false }
zkevm-keccak = { git = "https://github.com/axiom-crypto/halo2-lib.git",  branch = "community-edition", default-features = false }

# crypto
rlp = "0.5.2"
ethers-core = { version = "=2.0.6" } # used by halo2-mpt already
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
rand = "0.8"
rand_chacha = "0.3.1"

# aggregation 
snark-verifier = { git = "https://github.com/axiom-crypto/snark-verifier.git",  branch = "community-edition", default-features = false, features = ["loader_halo2"], optional = true }
snark-verifier-sdk = { git = "https://github.com/axiom-crypto/snark-verifier.git", branch = "community-edition", default-features = false, features = ["loader_halo2"], optional = true }

# generating circuit inputs from blockchain
ethers-providers = { version = "=2.0.6", optional = true }
tokio = { version = "1.26", default-features = false, features = ["rt", "rt-multi-thread"], optional = true }
futures = { version = "=0.3", optional = true }

syn = "2.0.15"
quote = "1.0.26"
proc-macro2 = "1.0.56"

# sever
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-tcp-server= "18.0.0"
jsonrpc-ws-server = "18.0.0"
jsonrpc-stdio-server = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-server-utils = "18.0.0"
jsonrpc-pubsub = "18.0.0"

#toml
toml = "0.7.6"

hex = "0.4.3"
test-log = "0.2.11"

[features]
default = ["halo2-axiom", "jemallocator", "display", "aggregation", "clap", "evm"]
aggregation = ["dep:snark-verifier", "snark-verifier-sdk", "providers","dep:circuit_derive"]
evm = ["snark-verifier-sdk?/loader_evm", "aggregation"]
providers = ["dep:ethers-providers", "dep:tokio", "dep:bincode", "dep:base64", "dep:serde_with","dep:futures"]
display = ["zkevm-keccak/display", "snark-verifier-sdk?/display", "dep:ark-std"]
clap = ["dep:clap", "dep:clap-num"]
# 'production' feature turns off circuit auto-configuration and forces trusted setup SRS to be read (and not generated)
production = []
# EXACTLY one of halo2-pse / halo2-axiom should always be turned on
halo2-pse = ["zkevm-keccak/halo2-pse", "snark-verifier-sdk?/halo2-pse"]
halo2-axiom = ["zkevm-keccak/halo2-axiom", "snark-verifier-sdk?/halo2-axiom"]
jemallocator = ["halo2-base/jemallocator"]

dev-graph = ["halo2-base/dev-graph"]
