[package]
name = "zkspv_circuits"
version = "0.1.1"
edition = "2021"


[[bin]]
name = "header_chain"
required-features = ["aggregation", "clap"]

[[bin]]
name = "services"
required-features = ["aggregation", "clap", "evm"]

[dependencies]
itertools = "0.10"
lazy_static = "1.4.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false,features =["raw_value"] }
rayon = "1.7"
thiserror = "1.0"

# macro
circuit_derive = { path = "src/util/circuit_derive", optional = true }

# misc
log = "0.4"
env_logger = "0.10"
log4rs = "1.2.0"
ark-std = { version = "0.3.0", features = ["print-trace"], optional = true }
clap = { version = "^4.0.13", features = ["derive"], optional = true }
clap-num = { version = "^1.0.2", optional = true }
bincode = { version = "1.3.3", optional = true }
base64 = { version = "0.21", optional = true }
serde_with = { version = "2.2", optional = true }

regex-simple = { version = "1", package = "regex" }

# halo2
ff = "0.12"
# halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git",  branch = "community-edition", default-features = false }
halo2-base = { git = "https://github.com/Orbiter-Finance/halo2-lib.git", branch = "community-edition-performance", default-features = false}
# zkevm-keccak = { git = "https://github.com/axiom-crypto/halo2-lib.git",  branch = "community-edition", default-features = false }
zkevm-keccak = { git = "https://github.com/Orbiter-Finance/halo2-lib.git",  branch = "community-edition-performance", default-features = false }

# crypto
rlp = "0.5.2"
ethers-core = { version = "^2.0.10" } # used by halo2-mpt already
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
rand = "*"
rand_chacha = "0.3.1"
num-bigint = { version = "0.4", features = ["rand"] }

# aggregation
snark-verifier = { git = "https://github.com/Orbiter-Finance/snark-verifier.git",  branch = "community-edition-performance", default-features = false, features = ["loader_halo2"], optional = true }
snark-verifier-sdk = { git = "https://github.com/Orbiter-Finance/snark-verifier.git", branch = "community-edition-performance", default-features = false, features = ["loader_halo2"], optional = true }

halo2_solidity_verifier = { git = "https://github.com/privacy-scaling-explorations/halo2-solidity-verifier" }
# generating circuit inputs from blockchain
ethers-providers = { version = "^2.0.10", optional = true }
zksync-web3-rs = "^0.1.1"
tokio = { version = "1.26", default-features = false, features = ["full"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = { version = "=0.3", optional = true }

syn = "2.0.15"
quote = "1.0.26"
proc-macro2 = "1.0.56"

# sever
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tower-http = { version = "0.4.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
hyper = "0.14.20"
console-subscriber = "0.2.0"
anyhow = "1"

jsonrpsee ={version =  "0.20.3",features = ["server", "http-client", "ws-client", "macros", "client-ws-transport-native-tls"]}

#toml
toml = "0.7.6"

hex = "0.4.3"
test-log = "0.2.11"

#data
chrono = "0.4.31"

rocksdb = "0.21.0"
parking_lot = "0.12.1"

[dev-dependencies]
test-case = "3.1.0"

[features]
default = ["halo2-axiom", "jemallocator", "display", "aggregation", "clap", "evm"]
aggregation = ["dep:snark-verifier", "snark-verifier-sdk", "providers","dep:circuit_derive"]
evm = ["snark-verifier-sdk?/loader_evm", "aggregation"]
providers = ["dep:ethers-providers", "dep:tokio", "dep:bincode", "dep:base64", "dep:serde_with","dep:futures"]
display = ["zkevm-keccak/display", "snark-verifier-sdk?/display", "dep:ark-std"]
clap = ["dep:clap", "dep:clap-num"]
# 'production' feature turns off circuit auto-configuration and forces trusted setup SRS to be read (and not generated)
production = []
# EXACTLY one of halo2-pse / halo2-axiom should always be turned on
halo2-pse = ["zkevm-keccak/halo2-pse", "snark-verifier-sdk?/halo2-pse"]
halo2-axiom = ["zkevm-keccak/halo2-axiom", "snark-verifier-sdk?/halo2-axiom"]
jemallocator = ["halo2-base/jemallocator"]

dev-graph = ["halo2-base/dev-graph"]
parallel-sub-circuit = [] # only for the sub-circuits that have NO share condition case! Currently not work properbly yet

[profile.test]
opt-level = 2

# [patch."https://github.com/Orbiter-Finance/halo2-axiom.git"]
# halo2_proofs = { path = "../halo2-axiom/halo2_proofs"}

# [patch."https://github.com/Orbiter-Finance/snark-verifier.git"]
# snark-verifier-sdk = { path = "../snark-verifier/snark-verifier-sdk"}
# snark-verifier = { path = "../snark-verifier/snark-verifier"}


# [patch."https://github.com/Orbiter-Finance/halo2-lib.git"]
# halo2-base = { path = "../halo2-lib/halo2-base"}
# zkevm-keccak = { path = "../halo2-lib/hashes/zkevm-keccak" }
# halo2-ecc = { path = "../halo2-lib/halo2-ecc" }


# [patch."https://github.com/Orbiter-Finance/halo2curves.git"]
# halo2curves = { path = "../halo2curves"}


# [patch."https://github.com/Orbiter-Finance/ec-gpu.git"]
# ec-gpu = { path = "../ec-gpu/ec-gpu"}
# ec-gpu-gen = { path = "../ec-gpu/ec-gpu-gen"}



# [patch.crates-io]
# snark-verifier = { git = "https://github.com/Orbiter-Finance/snark-verifier.git",  branch = "community-edition-performance", default-features = false, features = ["loader_halo2"], optional = true }
# snark-verifier-sdk = { git = "https://github.com/Orbiter-Finance/snark-verifier.git", branch = "community-edition-performance", default-features = false, features = ["loader_halo2"], optional = true }
# halo2-base = { git = "https://github.com/Orbiter-Finance/halo2-lib.git",  branch = "community-edition-performance", default-features = false }
# zkevm-keccak = { git = "https://github.com/Orbiter-Finance/halo2-lib.git",  branch = "community-edition-performance", default-features = false }